@@ -14,11 +14,3 @@ def test_Env_dyn():
     assert env2["yolo"] == 13
     assert "yolo" not in env
 
-
-def test_Env_dyn_jpath():
-    env=reqman.Env( {"orig":dict(x=42)} )
-    assert reqman.jpath(env,"orig.x") == 42
-
-    env.save("data", dict(x=42))
-    assert reqman.jpath(env,"data.x") == 42
-    assert reqman.jpath(env,"data.size") == 1
