@@ -1,4 +1,5 @@
 Working on 3.0.0 (new core)
+- use HTTPX again and forever ;-) (bye aiohttp)
 - "proxy" support too (can be really configurable, see proxies/httpx)
 - EVOL: the "resolving" mechanism is now completly new (more robust, more maintanable)
 - EVOL: some little behaviour has changed :
